src/test/data/highlighting/mixed_case_tokens.tz
parameter unit;
storage unit;
code {
       <error descr="Unknown instruction">PAIRpair</error> int 123; # this is invalid, but must be lexed as a tag, the annotator will add the error highlighting
     }